--- a/app/assets/stylesheets/annotations.css.sass
+++ b/app/assets/stylesheets/annotations.css.sass
@@ -101,12 +101,14 @@
         left: 65%
       // High-Accuracy Scale
       &:nth-child(8)
+        font-weight: 600
         top: 10%
         left: -14%
       // Silicon Mold
       &:nth-child(9)
+        font-weight: 600
         top: 20%
-        left: 70%
+        left: 60%
 
 .annotated.annotated-professional
   .annotations
@@ -125,6 +127,7 @@
         left: -14%
       // SHMP
       &:nth-child(4)
+        font-weight: 600
         top: 70%
         left: 10%
       // Calcium Gluconate
@@ -146,8 +149,9 @@
       // Silicon Mold
       &:nth-child(9)
         top: 20%
-        left: 70%
+        left: 60%
       // Caviar Dosing Tray
       &:nth-child(10)
+        font-weight: 600
         top: 5%
         left: 55%
