[spherification] kit copy edit

--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -103,7 +103,7 @@
           = image_tag 'https://www.filepicker.io/api/file/ZZk2FdB3TcXndhp2tihA'
     .span5.offset1.lead
       %h2 The Creative Kit
-      The Creative Kit includes the technical ingredients you'll need to complete our reverse and direct spherification modules. It has most of the tools as well, except for a high-accuracy scale and the mold needed for frozen-reverse spherification.
+      The Modernist Pantry Creative Sphere Magic Kit includes the technical ingredients you'll need to complete the ChefSteps reverse and direct spherification modules. It has most of the tools as well, except for a high-accuracy scale and the mold needed for frozen-reverse spherification.
       .well.section
         %h4.text-center= "The Creative Kit $39"
         = buy_now(311070543)
@@ -133,7 +133,7 @@
           = image_tag 'https://www.filepicker.io/api/file/NiJGuT9RkOOY9RUqDpyQ'
     .span5.offset1.lead
       %h2 The Enthusiast Kit
-      The Enthusiasts Kit includes all of the technical ingredients and tools you'll need to complete our entire course. It adds a high-accuracy scale (capable of weighing 1/100th of a gram) and a high-quality silicon mold used for frozen-reverse spherification.
+      The Modernist Pantry Enthusiast Sphere Magic Kit includes all of the technical ingredients and tools you'll need to complete the entire ChefSteps spherification course. It adds a high-accuracy scale (capable of weighing 1/100th of a gram) and a high-quality silicon mold used for frozen-reverse spherification.
       .well.section
         %h4.text-center= "The Enthusiast Kit $70"
         = buy_now(311979727)
@@ -163,7 +163,7 @@
           = image_tag 'https://www.filepicker.io/api/file/KLRyOQ6fTB2K2y2rc2Gq'
     .span5.offset1.lead
       %h2 The Professional Kit
-      The Professional Kit includes everything in our Enthusiast Kit, plus a professional caviar dosing tray used for direct spherification. This hard to find tool makes it easy to quickly turn any liquid into small spheres bursting with flavor
+      The Modernist Pantry Professional Sphere Magic Kit includes everything in the Enthusiast Kit, plus a professional caviar dosing tray used for direct spherification. This hard to find tool makes it easy to quickly turn any liquid into small spheres bursting with flavor. This kit includes all of the tools featured in ChefSteps spherification course.
       .well.section
         %h4.text-center= "The Professional Kit $119"
         = buy_now(311979875)
