--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1128,8 +1128,9 @@ csingredienteditpair
   line-height: 40px
   width: 100%
 
-#edit-mode.active
-  background: #0088cc
+
+.fake-link
+  color: #0088cc
 
 
 .inline-group
