--- a/app/assets/javascripts/angular/templates/_ingredient_edit_pair.html.haml
+++ b/app/assets/javascripts/angular/templates/_ingredient_edit_pair.html.haml
@@ -2,9 +2,10 @@
   %csEditPairShow.show-group
     .ingredient-title
       %span(ng-switch="" on="ingredient_display_type(ai)")>
-        %span(ng-switch-default="" ng-bind-html-unsafe="ai.ingredient.title")
-        %a(ng-switch-when="product" ng-href="{{ai.ingredient.product_url}}" target='_blank' ng-bind-html-unsafe="ai.ingredient.title")
-        %a(ng-switch-when="subrecipe" ng-href="{{'/activities/' + ai.ingredient.sub_activity_id}}" ng-bind-html-unsafe="ai.ingredient.title" target="_blank"){onclick: "addScalingToLink(this);"}
+        %span(ng-switch-default="" ng-bind-html-unsafe="ai.ingredient.title")>
+        %a(ng-switch-when="product" ng-href="{{ai.ingredient.product_url}}" target='_blank' ng-bind-html-unsafe="ai.ingredient.title")>
+        %a(ng-switch-when="subrecipe" ng-href="{{'/activities/' + ai.ingredient.sub_activity_id}}" ng-bind-html-unsafe="ai.ingredient.title" target="_blank")>{onclick: "addScalingToLink(this);"}
+        %span.fake-link(ng-switch-when="fake_link" ng-bind-html-unsafe="ai.ingredient.title")>
       %span(ng-show="!!ai.note" ng-bind-html-unsafe="', ' + (ai.note | shortcode)")>
 
     .quantity-group.qtyfade
