--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1035,6 +1035,12 @@ ul.equipment
 .edit-pair-transclude
   width: 100%
 
+.transparent-target
+  position: absolute
+  width: 100%
+  height:  100%
+  z-index: 1000
+
 #edit-group
   margin-left: 20px
   margin-top: 11px
