[annotations] on scroll

--- a/app/assets/stylesheets/annotations.css.sass
+++ b/app/assets/stylesheets/annotations.css.sass
@@ -36,6 +36,21 @@
       -moz-transform: scale(0.8)
       -o-transform: scale(0.8)
 
+.annotations-show
+  cursor: pointer
+  img
+    transform: scale(0.8)
+    -webkit-transform: scale(0.8)
+    -moz-transform: scale(0.8)
+    -o-transform: scale(0.8)
+  .annotations
+    width: 115%
+    opacity: 1
+    transform: scale(0.8)
+    -webkit-transform: scale(0.8)
+    -moz-transform: scale(0.8)
+    -o-transform: scale(0.8)
+
 .annotated.annotated-creative
   .annotations
     .annotation
