--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -70,21 +70,23 @@
 - content_for :bottom do
   - if ! @minimal
 
-    .row(ng-hide="editMode")
-      .span12
-        %h3 Techniques
-        #technique-carousel
-          = render 'shared/horizontal_scroller', items: @techniques
-        %h3 Recipes
-        #related-carousel
-          = render 'shared/horizontal_scroller', items: @recipes
+    - if ! ENV["CS_NO_SUGGESTED_ACTIVITIES"]
+      .row(ng-hide="editMode")
+        .span12
+          %h3 Techniques
+          #technique-carousel
+            = render 'shared/horizontal_scroller', items: @techniques
+          %h3 Recipes
+          #related-carousel
+            = render 'shared/horizontal_scroller', items: @recipes
 
-    .row(ng-hide="editMode")
-      .span12
-        %h3 Discussion
-        .section
-          - disqus_id = "activity-#{@activity.id}"
-          = render 'layouts/disqus_comments', disqus_id: disqus_id, disqus_title: @activity.title, disqus_url: activity_url(@activity)
+    - if ! ENV["CS_NO_DISQUS"]
+      .row(ng-hide="editMode")
+        .span12
+          %h3 Discussion
+          .section
+            - disqus_id = "activity-#{@activity.id}"
+            = render 'layouts/disqus_comments', disqus_id: disqus_id, disqus_title: @activity.title, disqus_url: activity_url(@activity)
 
 - if @course
   .modal.hide.fade#syllabus-modal
@@ -95,24 +97,25 @@
       = course_syllabus(@course)
 
 - content_for :popup_bottom do
-  - if @viewed_activities && @viewed_activities.count > 2 && current_user.nil?
-    .container-fluid.popup-bottom(ng-hide="editMode")
-      .row-fluid
-        .container
-          .row
-            .span12
-              .row
-                .span5.offset1
-                  %h3= ab_test 'bottom_popup_copy_1', 'Join the Community', 'Cook Better Than You Ever Thought Possible', 'Learn How to Be a Better Cook'
-                  = form_tag welcome_url, :method => :get do
-                    = email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Enter email', required: true}
-                    = hidden_field_tag :signed_up_from, 'bottom_popup_cta'
-                    = submit_tag 'Sign Up Now', class: 'btn btn-secondary', id: 'subscribe-email'
-                .span6
-                  %h3 Benefits Include
-                  %ul
-                    %li Ask questions of some of the world's best chefs
-                    %li Keep up to date with our latest recipes
-                .popup-bottom-close
-                  %i.icon-remove
+  - if ! ENV["CS_NO_POPUP"]
+    - if @viewed_activities && @viewed_activities.count > 2 && current_user.nil?
+      .container-fluid.popup-bottom(ng-hide="editMode")
+        .row-fluid
+          .container
+            .row
+              .span12
+                .row
+                  .span5.offset1
+                    %h3= ab_test 'bottom_popup_copy_1', 'Join the Community', 'Cook Better Than You Ever Thought Possible', 'Learn How to Be a Better Cook'
+                    = form_tag welcome_url, :method => :get do
+                      = email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Enter email', required: true}
+                      = hidden_field_tag :signed_up_from, 'bottom_popup_cta'
+                      = submit_tag 'Sign Up Now', class: 'btn btn-secondary', id: 'subscribe-email'
+                  .span6
+                    %h3 Benefits Include
+                    %ul
+                      %li Ask questions of some of the world's best chefs
+                      %li Keep up to date with our latest recipes
+                  .popup-bottom-close
+                    %i.icon-remove
 
