units use select instead of typeahead

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1120,9 +1120,9 @@ csingredienteditpair
 
     .ingredient-title
       width: 80%
-      input:first-child
+      select
         width: 55%
-      input:last-child
+      input
         width: 44%
 
     .quantity-group
