--- a/app/views/client_views/_ingredient_edit_pair.html.haml
+++ b/app/views/client_views/_ingredient_edit_pair.html.haml
@@ -23,4 +23,4 @@
       %input(csselectonfocus="" csinputmonkeyingredient="" type="text" placeholder="New ingredient" typeahead-editable="true" autocomplete="off" class="ingredient-typeahead" ng-model="ai.ingredient" typeahead="i as i.title for i in all_ingredients($viewValue)")
       %input(csselectonfocus="" type="text" placeholder="note" autocomplete="off" ng-model="ai.note")
     %input.quantity-group(csselectonfocus="" type="text" placeholder="qty" autocomplete="off" ng-model="ai.display_quantity")
-    %input.unit(csselectonfocus="" type="text" ng-model="ai.unit" required="true" typeahead="u for u in ['g', 'kg', 'ea', 'a/n', 'recipe']")
+    %select.unit(type="text" ng-model="ai.unit" required="true" ng-options="u for u in ['g', 'kg', 'ea', 'a/n', 'recipe']")
