[likes] uploads can now be liked

--- a/app/assets/stylesheets/timeline.css.sass
+++ b/app/assets/stylesheets/timeline.css.sass
@@ -90,6 +90,8 @@
 // TIMELINE TEXT ONLY //
 .timeline-text-only[data-direction='left']
   padding-right: 20%
+  padding-top: 10px
+  padding-bottom: 10px
   .timeline-text-only-text
     width: 100%
     position: relative
@@ -103,6 +105,8 @@
       border-bottom: 1px solid gray
 .timeline-text-only[data-direction='right']
   padding-left: 20%
+  padding-top: 10px
+  padding-bottom: 10px
   .timeline-text-only-text
     width: 100%
     position: relative
