--- a/app/views/activities/_edit_toolbar.haml
+++ b/app/views/activities/_edit_toolbar.haml
@@ -3,30 +3,12 @@
     Edit
   .btn-toolbar(ng-show="editMode")
     .btn-group
-      -#%button.btn.dropdown-toggle{data: {toggle: 'dropdown'}, href: '#'}
-      -#  %i.icon-plus
-      -#  %i.icon-angle-down
-      -#%ul.dropdown-menu
-      -#  %li
-      -#    =link_to "Video / Image", "#"
-      -#  %li
-      -#    =link_to "Description", "#"
-      -#  %li
-      -#    =link_to "Ingredients", "#"
-      -#  %li
-      -#    =link_to "Yield", "#"
-      -#  %li
-      -#    =link_to "Timing", "#"
-      -#  %li
-      -#    =link_to "Equipment", "#"
-      -#  %li
-      -#    =link_to "Optional Equipment", "#"
-      -#  %li
-      -#    =link_to "Steps", "#"
-
-      %button#edit-undo.btn.btn(ng-click="undo()" ng-disabled="! undoAvailable()"){type: 'button'}
+      %button#edit-meta.btn.btn-primary(type="button" ng-model="editMeta" btn-checkbox="")
+        Meta
+    .btn-group
+      %button#edit-undo.btn.btn-secondary(ng-click="undo()" ng-disabled="! undoAvailable()"){type: 'button'}
         %i.icon-undo
-      %button#edit-redo.btn.btn(ng-click="redo()" ng-disabled="! redoAvailable()"){type: 'button'}
+      %button#edit-redo.btn.btn-secondary(ng-click="redo()" ng-disabled="! redoAvailable()"){type: 'button'}
         %i.icon-repeat
     .btn-group
       %button#edit-save.btn.btn-primary(type='button' ng-click="endEditMode()" ng-show="editMode")
