--- a/app/views/activities/_metadata.html.haml
+++ b/app/views/activities/_metadata.html.haml
@@ -5,3 +5,7 @@
       Private
     %button.btn(type="button" ng-click="activity.published='true'" ng-class="{active: activity.published == true}")
       Published
+  %h6
+    Featured Image
+  %img(ng-show="hasFeaturedImage()" ng-src="{{featuredImageURL(200)}}")
+  .csfilepicker(ng-model="activity.featured_image_id")
