--- a/app/views/activities/_metadata.html.haml
+++ b/app/views/activities/_metadata.html.haml
@@ -1,4 +1,4 @@
-.meta-edit.section
+.meta-edit
   %h4 Metadata
   .btn-group(data-toggle="buttons-radio")
     %button.btn(type="button" ng-click="activity.published='false'" ng-class="{active: activity.published == false}")
@@ -6,10 +6,10 @@
     %button.btn(type="button" ng-click="activity.published='true'" ng-class="{active: activity.published == true}")
       Published
   %h6 Activity Type
-  %ul
-    %li(ng-repeat="actType in activityTypes")
+  .btn-toolbar
+    %button.btn(ng-repeat="actType in activityTypes" type="button" ng-click="toggleActivityType(actType)" ng-class="{active: hasActivityType(actType)}")
       {{actType}}
-      %input(type="checkbox"  ng-click="toggleActivityType(actType)" ng-checked="hasActivityType(actType)")
-  %h6 Featured Image
+
+  %h6 Featured Image (For Thumbnails)
   %img(ng-show="hasFeaturedImage()" ng-src="{{featuredImageURL(200)}}")
   .csfilepicker(ng-model="activity.featured_image_id")
