--- a/app/views/events/like/_create.html.haml
+++ b/app/views/events/like/_create.html.haml
@@ -2,6 +2,8 @@
 .timeline-text-only{data: {direction: direction}}
   .timeline-text-only-text.text-center
     %div
-      = "You liked the #{link_to event.trackable.likeable.class, event.trackable.likeable}.".html_safe
+      - case event.trackable.likeable.class.to_s
+      - when 'Upload'
+        = "You liked the #{link_to 'photo', event.trackable.likeable}.".html_safe
     %div
       = time_ago_in_words(event.created_at) + ' ago'
