--- a/app/views/activities/_metadata.html.haml
+++ b/app/views/activities/_metadata.html.haml
@@ -1,11 +1,5 @@
-.meta-edit
+.meta-edit.well
 
-  %h6 Status
-  .btn-group(data-toggle="buttons-radio")
-    %button.btn(type="button" ng-click="activity.published='false'" ng-class="{active: activity.published == false}")
-      Private
-    %button.btn(type="button" ng-click="activity.published='true'" ng-class="{active: activity.published == true}")
-      Published
 
   %h6 Activity Type
   .btn-toolbar
