--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1,7 +1,7 @@
 @import 'mixins'
 
 .top-container
-  margin-top: 56px
+  margin-top: 76px
 
 #main-container
   margin-top: 70px
@@ -744,6 +744,11 @@ ul.equipment
     background: gray
     @include transition(all 100ms)
 
+.btn-secondary[disabled]
+  -webkit-box-shadow: 0 3px 0px -1px #999
+  -moz-box-shadow: 0 3px 0px -1px #999
+  box-shadow: 0 3px 0px -1px #999999
+
 .btn-gray
   background: $light-gray
   border: none
@@ -1055,6 +1060,9 @@ ul.equipment
 
 // WYSIWYG EDITING
 
+#edit-mode
+  margin-top: 10px
+  margin-left: 10px
 
 .edit-pair, .edit-pair-show, .edit-pair-edit
   width: 100%
@@ -1069,8 +1077,6 @@ ul.equipment
   z-index: 1000
 
 #edit-group
-  margin-left: 20px
-  margin-top: 11px
 
   i
     font-size: 18px
@@ -1134,30 +1140,30 @@ csingredienteditpair
 .no-bullet
   list-style-type: none
 
-.basicfade-enter-setup, .basicfade-leave-setup, .basicfade-move-setup, .basicfade-show-setup, .basicfade-hide-setup
-  -webkit-transition: .25s ease-in-out all
-  -moz-transition: .25s ease-in-out all
-  -o-transition: .25s ease-in-out all
-  transition: .25s ease-in-out all
-
-.basicfade-enter-setup, .basicfade-show-setup
-  opacity: 0
-
-.basicfade-enter-start, .basicfade-show-start
-  opacity: 1
-
-.basicfade-leave-setup, .basicfade-hide-setup
-  opacity: 1
-
-.basicfade-leave-start, .basicfade-hide-start
-  opacity: 0
-
 .meta-edit
   border: 1px solid $offwhite
   padding:  10px
   margin-bottom: 15px
 
+.editbar-enter-setup, .editbar-leave-setup
+  -webkit-transition: all linear 0.5s
+  -moz-transition: all linear 0.5s
+  -o-transition: all linear 0.5s
+  transition: all linear 0.5s
 
+.editbar-enter-setup
+  position: absolute
+  left: 100%
+
+.editbar-enter-start
+  left: 0
+
+.editbar-leave-setup
+  position: absolute
+  left: 0
+
+.editbar-leave-start
+  left: -100%
 
 
 // Making this match h1. I tried @including h1 but that was a no go.
