--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -27,14 +27,23 @@
         - else
           .flat-form.section
             %h2 Enroll for free now
-            = form_for @new_user, url: signup_and_enroll_path, method: :post, class: 'form-inline' do |f|
-              = hidden_field_tag :course_id, @course.id
-              = f.text_field :name, {placeholder: 'name', required: true, class: 'input-block-level'}
-              = f.email_field :email, {placeholder: 'email', required: true, class: 'input-block-level'}
-              .input-block-level-password
-                = f.password_field :password, {placeholder: 'password', required: true, class: 'input-block-level'}
-                = link_to 'Show', 'javascript:void(0);', class: 'btn btn-secondary', id: 'user-password-show'
-              = f.submit 'Enroll', class: 'btn btn-primary btn-large btn-block', id: 'subscribe-email'
+            .section
+              = link_to 'Enroll', 'javascript:void(0);', class: 'btn btn-primary btn-large btn-block'
+            .section
+              = form_for @new_user, url: signup_and_enroll_path, method: :post, class: 'form-inline' do |f|
+                = hidden_field_tag :course_id, @course.id
+                = f.text_field :name, {placeholder: 'name', required: true, class: 'input-block-level'}
+                = f.email_field :email, {placeholder: 'email', required: true, class: 'input-block-level'}
+                .input-block-level-password
+                  = f.password_field :password, {placeholder: 'password', required: true, class: 'input-block-level'}
+                  = link_to 'Show', 'javascript:void(0);', class: 'btn btn-secondary', id: 'user-password-show'
+                = f.submit 'Enroll', class: 'btn btn-primary btn-large btn-block', id: 'subscribe-email'
+            .section
+              = form_tag signin_and_enroll_path, method: :post do
+                = hidden_field_tag :course_id, @course.id
+                = text_field_tag :email, nil, placeholder: 'email', class: 'input-block-level'
+                = password_field_tag :password, nil, placeholder: 'password', class: 'input-block-level'
+                = submit_tag 'Sign In', class: 'btn btn-primary btn-large btn-block'
       .well   
         - if @course.users.count > 1
           %h4= "Current enrollment: #{@course.users.count}"
