meta etc production ready

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -848,6 +848,10 @@ ul.equipment
 
 /* Navbar */
 .navbar-fixed-top
+  /* http://stackoverflow.com/questions/11926028/bootstrap-dropdown-in-collapse */
+  #editMode
+    height: auto
+    overflow:  visible
   .navbar-inner
     box-shadow: none
     background-image: none
